# python-project-51

./: Makefile  README.md  pyproject.toml
.github/workflows/: project-check.yml
page_loader/: __init__.py
page_loader/cli/: cli.py
page_loader/logger/: logger_setup.py
page_loader/page_loader/: exceptions.py  file_path_work.py  loader.py  parser.py
page_loader/scripts/: page_loader.py
tests/cli/: test_cli.py
tests/fixtures/: expected_result.html  test_page.html
tests/fixtures/content/: test_style.css
tests/page_loader/: test_exceptions.py  test_file_path_work.py  test_loader.py  test_parser.py
