[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "CLI-utilite for downloading web-pages in chosen directory"
authors = ["Mikhail Orlov <crazyminer398@gmail.com>"]
packages = [
  { include = "page_loader" },
]

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
bs4 = "^0.0.1"
progress = "^1.6"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
requests-mock = "^1.10.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
